use conduit() to join routes

--- a/test/index.html
+++ b/test/index.html
@@ -32,6 +32,7 @@
 </script>
 
 <script src="../conduit.js"></script>
+<script src="test.conduit.js"></script>
 <script src="test.junction.js"></script>
 <script src="test.observer.js"></script>
 <script src="test.attribute.js"></script>
