--- a/test/index.html
+++ b/test/index.html
@@ -9,38 +9,5 @@
 <script src="https://unpkg.com/mocha/mocha.js"></script>
 <script class="mocha-init">
   mocha.setup('bdd')
-
-  function nextTick() {
-    return new Promise(resolve => {
-      setTimeout(resolve, 0)
-    })
-  }
-
-  function testRoute(route) {
-    const results = []
-    route.on('data', (...args) => {
-      results.push(args)
-    })
-    return results
-  }
-
-  function expectResult(result, target, expected) {
-    const [element, details] = result
-    chai.expect(element).to.equal(target)
-    chai.expect(details).to.deep.equal(expected)
-  }
 </script>
-
-<script src="../conduit.js"></script>
-<script src="test.conduit.js"></script>
-<script src="test.junction.js"></script>
-<script src="test.observer.js"></script>
-<script src="test.attribute.js"></script>
-<script src="test.each.js"></script>
-<script src="test.filter.js"></script>
-<script src="test.follow.js"></script>
-<script src="test.listen.js"></script>
-<script src="test.text.js"></script>
-<script class="mocha-exec">
-  mocha.run()
-</script>
+<script type="module" src="index.js"></script>
